[2.0.2]

    * Fixed dimension sorting when grid was reused or multiple grids on screen (fixes #71).
    * Fixed CSV export in explore mode (#72).

[2.0.1]

    * Column sorting now follows order_attribute from model.
    * Added AngularJS integration example.
    * Added chart image export support.
    * Line charts now allow various curve types.
    * Google Analytics plugin restored (events tracking).
    * Added warning if server result limit has been hit.
    * Added server information dialog.
    * Added new horizontal columns chart.
    * Added two columns mode and hide controls mode.
    * New icon library and revamped UI.
    * Added automatic content-based column resize feature.
    * Added support for negated cuts (inverse filters).
    * Added support for custom column formatting functions.
    * Added cube metadata option to set view default params.
    * Option to show/hide chart legend.
    * Pie charts are now sorted by size of slice.
    * Serializing now shows JSON in a modal dialog and is easier to copy.

    * Responsive design.
    * More printer-friendly CSS.
    * UI is now refreshed in-place instead of blocking whole UI.
    * Using templating for HTML views (no more HTML/JavaScript spaguetti code).
    * Moved from jQGrid to more versatile Angular ui-grid.
    * Refactored to Angular. Dropped jQueryUI.
    * Now using Bootstrap embedded (no global CSS selectors) for styling, without
      impacting page styles and better avoiding being impacted by container page styling.
    * Introduced Grunt and Bower build toolchain. Also JSDoc.
    * Separated CubesViewer server and client into two different projects.
    * License changed to pure MIT (removed extra clause).

[0.0.11]

    * Fixed bug causing datefilter to unnecessarily require 'cv-datefilter: true'.
    * Moved GUI interface to top sticky menu (warning: could break existing
      integrations of the interface).
    * Changed chart resize method to a fixed set of height choices.